--- a/system/.htaccess
+++ b/system/.htaccess
@@ -1,3 +1,8 @@
+php_value upload_max_filesize 50M
+php_value post_max_size 65M
+php_value max.execution_time 300
+
+
 <IfModule authz_core_module>
 	Require all denied
 </IfModule>
